<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pdaotao"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/pdaotao" />
        <item
            android:id="@+id/nav_pcongtac"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/pcongtac" />
        <item
            android:id="@+id/nav_ptaichinh"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ptaichinh" />
        <item
            android:id="@+id/nav_noti_cai_nhan"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/noti_cai_nhan" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_stat_name"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
